--- a/hr_contract_currency/i18n/fr.po
+++ b/hr_contract_currency/i18n/fr.po
@@ -17,6 +17,12 @@ msgstr ""
 "X-Generator: Weblate 3.6.1\n"
 
 #. module: hr_contract_currency
+#: model:ir.model,name:hr_contract_currency.model_hr_contract
+#, fuzzy
+msgid "Contract"
+msgstr "Contrat de l'employé(e)"
+
+#. module: hr_contract_currency
 #: model:ir.model.fields,field_description:hr_contract_currency.field_hr_contract__currency_id
 msgid "Currency"
 msgstr "Devise"
@@ -24,11 +30,6 @@ msgstr "Devise"
 #. module: hr_contract_currency
 #: model:ir.model.fields,field_description:hr_contract_currency.field_hr_contract__display_name
 msgid "Display Name"
-msgstr ""
-
-#. module: hr_contract_currency
-#: model:ir.model,name:hr_contract_currency.model_hr_contract
-msgid "Employee Contract"
 msgstr ""
 
 #. module: hr_contract_currency
@@ -40,7 +41,3 @@ msgstr ""
 #: model:ir.model.fields,field_description:hr_contract_currency.field_hr_contract____last_update
 msgid "Last Modified on"
 msgstr ""
-
-#, fuzzy
-#~ msgid "Contract"
-#~ msgstr "Contrat de l'employé(e)"
